--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -219,7 +219,7 @@ html
               $('#eventwindow').attr('class', this.id)
               event_handler(
                 "/event/" + this.id, 
-                "{{ request.user.id }}", 
+                "{{ request.user.userextend.id }}", 
                 "{{ csrf_token }}"
               );
             });
