change some POST request to GET request

--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -496,7 +496,10 @@ html
         })
         $('#eventwindow').attr('class', this.closest('.card').id)
         console.log("event/" + this.closest('.card').id)
-        event_handler("/event/" + this.closest('.card').id, "{{ request.user.userextend.id }}", "{{ csrf_token }}");
+        event_handler(
+          "/event/" + this.closest('.card').id, 
+          "{{ request.user.userextend.id }}"
+        );
       });
 
     //-script(src="{% static 'js/semantic.min.js' %}")
