modify some UI, cancel phone subwindow top/down animation

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -286,6 +286,7 @@ a
         padding: 0.5rem 1.5rem 0.5rem 1.5rem
         border-radius: 1.5rem
         box-shadow: 0.3rem 0.15rem 0.4rem 0.1rem var(--boxshadow-color)
+        content-visibility: auto;
 
         *
           margin: 0
