add link to every event

--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -170,6 +170,11 @@ html
             p.date 21/6/28,29
           p.description - 改了很多很多很多很多東西
           p.description - 各位晚ㄢ
+
+          .top
+            p.version 0.0.21
+            p.date 21/7/3
+          p.description - 現在可以分享你的活動連結給其他人了
           
           
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
