--- a/static/sass/about_us.css
+++ b/static/sass/about_us.css
@@ -6,14 +6,16 @@
   --fontcolor-navbarbutton: #000000;
   --fontcolor-header: #000000;
   --fontcolor-text: #000000;
-  --color-main: #FAAD95; }
+  --color-main: #FAAD95;
+}
 
 /************ */
 /*entire area */
 /************ */
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 /*background-group photo */
 #background {
@@ -22,11 +24,13 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  opacity: 1; }
+  opacity: 1;
+}
 
 #group-img {
   position: fixed;
-  transform: translate(0, -5%);
+  -webkit-transform: translate(0, -5%);
+          transform: translate(0, -5%);
   background-image: url("../file/groupphoto_M.png");
   /*top: 0; */
   top: 0;
@@ -36,7 +40,8 @@
   opacity: 1;
   z-index: 0;
   background-size: 100% auto;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+}
 
 /******* */
 /*header */
@@ -49,7 +54,8 @@ h1 {
   font-weight: normal;
   font-family: var(--font-family-header);
   font-style: var(--font-style-header);
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 p {
   position: static;
@@ -60,60 +66,97 @@ p {
   font-family: var(--font-family-text);
   font-style: var(--font-style-text);
   text-decoration: none;
-  line-height: 1.4825em; }
+  line-height: 1.4825em;
+}
 
 a {
-  color: var(--fontcolor-header); }
+  color: var(--fontcolor-header);
+}
 
 #slogan {
-  margin: 0 32vw 0 32vw; }
+  margin: 0 32vw 0 32vw;
+}
 
 /********** */
 /*main area */
 /********** */
 #gap1 {
   width: 100%;
-  height: 0px; }
+  height: 0px;
+}
 
 #gap2 {
   width: 100%;
-  height: 7vh; }
+  height: 7vh;
+}
 
 #gap3 {
   width: 100%;
-  height: 50vh; }
+  height: 50vh;
+}
 
 .logs {
   width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-content: center;
-  align-items: flex-start; }
-  .logs .top {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: flex-start;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 1rem; }
-    .logs .top .version {
-      font-weight: 500;
-      font-size: 1rem;
-      color: var(--black-3); }
-    .logs .top .date {
-      font-weight: 700;
-      font-size: 0.7rem;
-      color: var(--black-3); }
-  .logs .description {
-    font-weight: 500;
-    font-size: 1rem;
-    color: var(--black-4);
-    margin-left: 2rem;
-    text-indent: -1rem; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.logs .top {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 1rem;
+}
+
+.logs .top .version {
+  font-weight: 500;
+  font-size: 1rem;
+  color: var(--black-3);
+}
+
+.logs .top .date {
+  font-weight: 700;
+  font-size: 0.7rem;
+  color: var(--black-3);
+}
+
+.logs .description {
+  font-weight: 500;
+  font-size: 1rem;
+  color: var(--black-4);
+  margin-left: 2rem;
+  text-indent: -1rem;
+}
 
 #img-cards {
   position: absolute;
@@ -122,22 +165,39 @@ a {
   border-radius: 4rem 4rem 0 0;
   width: 100%;
   top: 85%;
-  z-index: 1; }
-  #img-cards h1 {
-    /* about us words */
-    padding-top: 1%;
-    padding-bottom: 3%; }
+  z-index: 1;
+}
+
+#img-cards h1 {
+  /* about us words */
+  padding-top: 1%;
+  padding-bottom: 3%;
+}
 
 #cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin: 0 13% 5% 13%;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: center;
-  align-items: flex-start; }
-  #cards a {
-    margin: 0; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+#cards a {
+  margin: 0;
+}
 
 .card {
   position: relative;
@@ -149,7 +209,8 @@ a {
   border-radius: 1.5rem;
   opacity: 1;
   z-index: 2;
-  margin: 1.5rem; }
+  margin: 1.5rem;
+}
 
 .card-bg {
   position: absolute;
@@ -160,21 +221,25 @@ a {
   background-color: var(--color-main);
   border-radius: 1.5rem;
   opacity: 0.95;
-  z-index: 4; }
+  z-index: 4;
+}
 
 .personal_pic {
   position: absolute;
   /*父空間的position不能為static */
-  transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
   bottom: 0;
   left: 50%;
   border-radius: 1.5rem;
   width: 100%;
-  z-index: 3; }
+  z-index: 3;
+}
 
 .card-detail {
   position: absolute;
-  transform: translate(5%, 0);
+  -webkit-transform: translate(5%, 0);
+          transform: translate(5%, 0);
   height: 28%;
   width: 100%;
   left: 0;
@@ -183,106 +248,145 @@ a {
   /*UL/UR/DR/DL */
   border-radius: 1.5rem;
   opacity: 0.7;
-  z-index: 4; }
-  .card-detail * {
-    font-size: 2rem;
-    text-align: left;
-    color: var(--fontcolor-header); }
-  .card-detail p {
-    text-align: left;
-    padding-left: 5%;
-    margin: 2% 0; }
+  z-index: 4;
+}
+
+.card-detail * {
+  font-size: 2rem;
+  text-align: left;
+  color: var(--fontcolor-header);
+}
+
+.card-detail p {
+  text-align: left;
+  padding-left: 5%;
+  margin: 2% 0;
+}
 
 .personal-name {
   font-size: 2rem;
   line-height: 1em;
   margin: 0;
   padding-top: 5%;
-  padding-left: 5%; }
+  padding-left: 5%;
+}
 
 .description {
   font-size: 1rem;
   padding-right: 10%;
-  text-align: left; }
+  text-align: left;
+}
 
 .hidden-description {
   position: absolute;
   bottom: 0;
-  padding-bottom: 1vh; }
+  padding-bottom: 1vh;
+}
 
 @media only screen and (max-width: 1370px) {
   /* display on phone */
   #group-img {
-    top: 0vw; }
+    top: 0vw;
+  }
   #slogan {
-    margin: 0 14vw; }
+    margin: 0 14vw;
+  }
   #img-cards {
-    top: 60%; }
+    top: 60%;
+  }
   .card {
-    margin-bottom: 5%; }
+    margin-bottom: 5%;
+  }
   .flex-row {
-    margin: 0; } }
+    margin: 0;
+  }
+}
 
 @media only screen and (max-width: 1024px) and (max-height: 1366px) {
   /* display on phone */
   #group-img {
-    top: -2vw; }
+    top: -2vw;
+  }
   #slogan {
-    margin: 0 14vw; }
+    margin: 0 14vw;
+  }
   #img-cards {
-    top: 40%; }
+    top: 40%;
+  }
   .card {
-    margin-bottom: 5%; }
+    margin-bottom: 5%;
+  }
   .flex-row {
-    margin: 0; } }
+    margin: 0;
+  }
+}
 
 @media only screen and (max-width: 1024px) and (max-height: 768px) {
   /* display on phone */
   #group-img {
-    top: -2vw; }
+    top: -2vw;
+  }
   #slogan {
-    margin: 0 14vw; }
+    margin: 0 14vw;
+  }
   #img-cards {
-    top: 50%; }
+    top: 50%;
+  }
   .card {
-    margin-bottom: 5%; }
+    margin-bottom: 5%;
+  }
   .flex-row {
-    margin: 0; } }
+    margin: 0;
+  }
+}
 
 @media only screen and (max-width: 480px) {
   /* display on phone */
   #group-img {
     top: 5rem;
-    background-image: url("../file/groupphoto_S.png"); }
+    background-image: url("../file/groupphoto_S.png");
+  }
   #slogan {
-    margin: 0 14vw; }
+    margin: 0 14vw;
+  }
   #img-cards {
     top: 68vw;
-    border-radius: 2.5rem; }
-    #img-cards h1 {
-      font-size: 3rem;
-      font-weight: 500; }
-    #img-cards #slogan {
-      font-size: 0.9rem; }
-    #img-cards #cards {
-      margin: 0; }
-      #img-cards #cards .logs {
-        width: 80%;
-        margin-bottom: 10rem; }
-        #img-cards #cards .logs .description {
-          font-size: 0.75rem;
-          color: var(--black-4); }
-      #img-cards #cards #gap3 {
-        height: 20vh; }
-      #img-cards #cards .card {
-        margin: 5vw 4vw;
-        height: 13rem;
-        width: 8rem; }
-        #img-cards #cards .card .card-detail .personal-name {
-          font-size: 1.5rem; }
-        #img-cards #cards .card .card-detail .description {
-          font-size: 0.9rem; }
+    border-radius: 2.5rem;
+  }
+  #img-cards h1 {
+    font-size: 3rem;
+    font-weight: 500;
+  }
+  #img-cards #slogan {
+    font-size: 0.9rem;
+  }
+  #img-cards #cards {
+    margin: 0;
+  }
+  #img-cards #cards .logs {
+    width: 80%;
+    margin-bottom: 10rem;
+  }
+  #img-cards #cards .logs .description {
+    font-size: 0.75rem;
+    color: var(--black-4);
+  }
+  #img-cards #cards #gap3 {
+    height: 20vh;
+  }
+  #img-cards #cards .card {
+    margin: 5vw 4vw;
+    height: 13rem;
+    width: 8rem;
+  }
+  #img-cards #cards .card .card-detail .personal-name {
+    font-size: 1.5rem;
+  }
+  #img-cards #cards .card .card-detail .description {
+    font-size: 0.9rem;
+  }
   .flex-row {
-    margin: 0; } }
-
+    margin: 0;
+  }
+}
 /*# sourceMappingURL=about_us.css.map */
